--- a/src/app/components/subscribe-tv-show/subscribe-tv-show.component.html
+++ b/src/app/components/subscribe-tv-show/subscribe-tv-show.component.html
@@ -1,2 +1,2 @@
 <app-subscribe-item-window [itemDescribtion] = 'itemDescribtion$ | async'
-                           (setToLocalStorage) = 'setToLocalStorage(tvShowItem)'></app-subscribe-item-window>
+                           (setItemToLocal) = 'setMovieToLocal($event)'></app-subscribe-item-window>
