--- a/src/app/components/subscribe-movie/subscribe-movie.component.html
+++ b/src/app/components/subscribe-movie/subscribe-movie.component.html
@@ -1,2 +1,2 @@
 <app-subscribe-item-window [itemDescribtion] = 'itemDescribtion$ | async'
-                            ></app-subscribe-item-window>
+                            (setItemToLocal) = 'setMovieToLocal($event)'></app-subscribe-item-window>
