--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="content__container">
     <div class="header__container">
-      <app-header>s</app-header>
+      <app-header></app-header>
     </div>
       <router-outlet></router-outlet>
   </div>
