--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,11 +1,12 @@
 <div  [style.backgroundImage]="imgUrl"
       class="movie-list__item"
       (mouseleave) = "backGround = false"
-      (mouseenter) = "backGround = true">      
-  <div class="movie-list__bg" 
+      (mouseenter) = "backGround = true"> 
+      <div class="movie-list__bg" 
        *ngIf = "backGround">
     <div class="movie-list__title">
-      {{itemTitle}}
+      {{itemTitle}} <br>
+      <fa-icon [icon] = "faBook" class="movie-list__in-library" *ngIf = "isInLibrary"></fa-icon>
     </div>
   </div>
 </div>
