--- a/src/app/components/search-form/search-form.component.html
+++ b/src/app/components/search-form/search-form.component.html
@@ -1,4 +1,4 @@
-<form class="search-form search_form__container">
+<form cdkDrag class="search-form search_form__container">
   <div class="search_form__content-container">
 
     <h2 class="search_form__header">
@@ -9,30 +9,31 @@
 
       <div class="search-form__title-container">
         <label class="search-form__title-label">Title</label>
-        <input type="text" class="search-form__title-input" placeholder="Title">
+        <input type="text" name="title" [(ngModel)]="_searchFormService.title" class="search-form__title-input"
+          placeholder="title">
       </div>
 
       <div class="search-form__title-container">
         <label class="search-form__overview-label">Overview</label>
-        <textarea rows="4" placeholder="Overview" class="search-form__overview-input"></textarea>
+        <textarea rows="4" placeholder="Overview" name="overview" [(ngModel)]="_searchFormService.overview" class="search-form__overview-input"></textarea>
       </div>
 
     </div>
 
     <div class="search-form__progress-container">
-      <app-checkbox [label]="'Adult'"></app-checkbox>
-      <app-progressbar [label]="'Popularity'"></app-progressbar>
-      <app-progressbar [label]="'Vote average'"></app-progressbar>
+      <app-checkbox [label]="'Adult'" (boolValue)='adultValue($event)'></app-checkbox>
+      <app-progressbar [label]="'Popularity'" (getCurValue)="popularity($event)"></app-progressbar>
+      <app-progressbar [label]="'Vote average'" (getCurValue)="voteAverage($event)"></app-progressbar>
     </div>
-
     <div class="search-form__labels-button-container">
       <div class="search-form__labels-container">
-        <app-checkbox [label]="label.text" *ngFor='let label of labels' class="search-form__labels-container-item"></app-checkbox>
+        <app-checkbox [label]="label.text" [genre_id]=label.genre_id (getGenreId)="_searchFormService.getGenreId($event)"
+          *ngFor='let label of labels' class="search-form__labels-container-item"></app-checkbox>
       </div>
 
       <div class="search-form__button-container">
-        <app-checkbox [label]="'Remember inputs'"></app-checkbox>
-        <input type="button" value="Search" class="search-form__button">
+        <app-checkbox [label]="'Remember inputs'" (boolValue) = rememberImputs($event)></app-checkbox>
+        <input type="submit" value="Search" class="search-form__button" (click)="submit()">
       </div>
     </div>
 
