--- a/src/app/components/tv-shows-list/tv-shows-list.component.html
+++ b/src/app/components/tv-shows-list/tv-shows-list.component.html
@@ -6,13 +6,14 @@
                                      [infiniteScrollThrottle]="50" 
                                      [scrollWindow]="false" 
                                      (scrolled)="onScroll()">
-    <app-list-item *ngFor="let i of (tvShowList$ | async).results; let l = index" 
+    <app-list-item *ngFor="let i of (tvShowList$ | async).tvShowResults; let l = index" 
                    [itemTitle]='i.original_name'
                    [imgUrl]="'url('+apiImgUrl+i.poster_path+')'" 
                    class="list-item list-item__container"
                    (click) = "getItem(i)"
-                   routerLink = "/tv#shows/details">
+                   routerLink = "/tv#shows/details"
+                   [isInLibrary] = "(isInLibrary$ | async)[l]">
     </app-list-item>
-    <router-outlet></router-outlet>
+    <router-outlet class="subscribe-item subscribe-item-container"></router-outlet>
   </div>
 </div>
