--- a/src/app/components/progressbar/progressbar.component.html
+++ b/src/app/components/progressbar/progressbar.component.html
@@ -1,5 +1,5 @@
 <span class="progress-bar__label">{{label}}</span>
-<div class="progress-bar" (click) = 'changeValue($event)'>
+<div class="progress-bar" (click) = 'changeValue($event); getValue($event)'>
   <div class="progress-bar__value" [style.backgroundColor] = "color"  [style.width] = "value">
   </div>
 </div>
