--- a/src/app/components/subscribe-movie/subscribe-movie.component.html
+++ b/src/app/components/subscribe-movie/subscribe-movie.component.html
@@ -1,2 +1,4 @@
 <app-subscribe-item-window [itemDescribtion] = 'itemDescribtion$ | async'
-                            (setItemToLocal) = 'setMovieToLocal($event)'></app-subscribe-item-window>
+                            [isItemInLibrary] = 'isMovieInLibrary$ | async'
+                            (setItemToLocal) = 'setMovieToLocal($event)'
+                            ></app-subscribe-item-window>
