--- a/src/app/components/tv-shows-list/tv-shows-list.component.css
+++ b/src/app/components/tv-shows-list/tv-shows-list.component.css
@@ -2,14 +2,12 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: space-between;
   width: 100%;
   height: 90vh;
   overflow-y: scroll;
   background-color: rgb(38, 33, 38);
-  margin: 0 0.25em 0 0.25em;
-
 }
 
 .scroll-top__container {
