--- a/src/app/components/side-navigation-bar/side-navigation-bar.component.css
+++ b/src/app/components/side-navigation-bar/side-navigation-bar.component.css
@@ -40,3 +40,21 @@
     color: rgb(92, 92, 92);
     user-select: none;
 }
+
+.navigation-bar__items-mobile {
+    display: none;
+}
+
+@media (max-width: 600px) {
+    .logo__text {
+       display: none;
+    }
+
+    .logo__icon {
+        display: none;
+    }
+
+    .navigation-bar__items-mobile {
+        display: block;
+    }
+}
