--- a/src/app/components/subscribe-movie/subscribe-movie.component.html
+++ b/src/app/components/subscribe-movie/subscribe-movie.component.html
@@ -1,4 +1,5 @@
 <app-subscribe-item-window [itemDescribtion] = 'itemDescribtion$ | async'
                             [isItemInLibrary] = 'isMovieInLibrary$ | async'
                             (setItemToLocal) = 'setMovieToLocal($event)'
+                            [showbutton] = 'showbutton'
                             ></app-subscribe-item-window>
