--- a/src/app/components/subscribe-tv-show/subscribe-tv-show.component.html
+++ b/src/app/components/subscribe-tv-show/subscribe-tv-show.component.html
@@ -1,4 +1,5 @@
 <app-subscribe-item-window [itemDescribtion] = 'itemDescribtion$ | async'
                            (setItemToLocal) = 'setMovieToLocal($event)'
-                           [isItemInLibrary] = 'isTvShowInLibrary$ | async'>
+                           [isItemInLibrary] = 'isTvShowInLibrary$ | async'
+                           [showbutton] = 'showbutton'>
                             </app-subscribe-item-window>
