--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,20 +1,31 @@
 .header__container {
-    background-color: rgb(38, 33, 38);
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 1em;
-    padding-right: 2em;
-    height: 100%;
-    flex-wrap: wrap;
+  background-color: rgb(38, 33, 38);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 1em;
+  padding-right: 2em;
+  height: 100%;
+  flex-wrap: wrap;
 }
 
 .search-item {
-    border: 2px;
-    border-color: rgb(71, 93, 121);
-    border-style: solid;
+  border: 2px;
+  border-color: rgb(71, 93, 121);
+  border-style: solid;
 }
 
 .header-navigation {
-    display: flex;
+  display: flex;
+}
+
+@media (max-width: 600px) {
+  .header-navigation {
+    display: none;
+  }
+
+  .header__container {
+    padding-right: 0em;
+    padding-left: 0.5em;
+  }
 }
