--- a/src/app/components/movie-list/movie-list.component.css
+++ b/src/app/components/movie-list/movie-list.component.css
@@ -5,7 +5,6 @@
     justify-content: space-around;
     align-items: space-around;
     width: 100%;
-    height: 90vh;
     overflow-y: scroll;
     background-color: rgb(38, 33, 38);
 }
@@ -40,4 +39,12 @@ color: white;
 
 .warning-message__icon{
     font-size: 7em;
+}
+
+@media (max-width: 400px) {
+    .list-item__container {
+        width: 10em;
+        height:15em;
+        margin-bottom: 1em;
+    }
 }
