--- a/src/app/components/scroll-top/scroll-top.component.html
+++ b/src/app/components/scroll-top/scroll-top.component.html
@@ -1,3 +1,3 @@
-<div class="scroll__top-container scroll__top">
+<div class="scroll__top-container scroll__top" [style.height]="(showAddMovie$ | async) ? '58vh' : '88vh'">
   <fa-icon [icon] = "faArrowUp" class="scroll__top-icon"></fa-icon>
 </div>
