--- a/src/app/components/search-item/search-item.component.html
+++ b/src/app/components/search-item/search-item.component.html
@@ -1,3 +1,15 @@
-  <input type="text" class="search-item__input" placeholder="Search...">
-  <fa-icon [icon] = "faSearch" class="search-item__button" (click) = "toggle()"></fa-icon>
-  <app-search-form *ngIf = "this._searchFormService.showForm" [style.display] = "this._searchFormService.displayForm"></app-search-form>
+<input    type="text" 
+          class="search-item__input" 
+          placeholder="Search..."
+          [(ngModel)] = "inputValue"
+          (input) = "getValue(inputValue)"
+          (keyup.enter) = "searchItems()"
+          (focusout) = "inputValue = ''"
+          >
+<fa-icon  [icon] = "faSearch" 
+          class="search-item__button" 
+          (click) = "toggle()">
+</fa-icon>
+<app-search-form  *ngIf = "this._searchFormService.showForm" 
+                  [style.display] = "this._searchFormService.displayForm">
+</app-search-form>
