--- a/src/app/components/subscribe-item-window/subscribe-item-window.component.css
+++ b/src/app/components/subscribe-item-window/subscribe-item-window.component.css
@@ -13,13 +13,13 @@
 
 .subscribe-item {
   width: 100%;
-  height: 100%;
-  overflow-y: scroll;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  z-index: 3;
 }
 
 .subscribe-item__title {
@@ -70,8 +70,9 @@
 
 .subscribe-item__rating {
   height: 1em;
-  width: 98%;
+  width: 90%;
   border-radius: 5px;
+  box-sizing: border-box;
   border: 2px solid rgb(82, 78, 82);
 }
 
@@ -91,11 +92,10 @@
 .subscribe-item-container {
   position: absolute;
   background: rgba(38, 33, 38, 0.95);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   bottom: 0;
   right: 0;
-  display: flex;
   color: white;
 }
 
@@ -153,4 +153,25 @@
   color:rgba(82, 78, 82, 0.7);
   cursor: pointer;
   background-color: rgba(65, 62, 62, 0.7);
+}
+
+@media (max-width: 600px) {
+  .subscribe-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    height: max-content;
+    top: 0;
+  }
+
+  .subscribe-item__title-container{
+    width: 95%;
+    margin-top: 2em;
+  }
+  
+  .subscribe-item__img {
+    width: 80vw;
+    height: 50vw;
+  }
 }
