--- a/src/app/components/subscribe-tv-show/subscribe-tv-show.component.html
+++ b/src/app/components/subscribe-tv-show/subscribe-tv-show.component.html
@@ -1,5 +1,5 @@
-<app-subscribe-item-window [itemDescribtion] = 'itemDescribtion$ | async'
+<app-subscribe-item-window [itemDescription] = 'itemDescription$ | async'
                            (setItemToLocal) = 'setMovieToLocal($event)'
                            [isItemInLibrary] = 'isTvShowInLibrary$ | async'
-                           [showbutton] = 'showbutton'>
+                           [showButton] = 'showButton'>
                             </app-subscribe-item-window>
