--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,10 +4,10 @@
       This site was designed and developed by: Dzmitry Harnakou
     </span>
     <span class="about__text">
-      GitHub URL: <a href="https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project"> https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project </a>
+      GitHub URL: <a class="about__link" href="https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project"> https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project </a>
     </span>
     <span class="about__text">
-      GitHub pages : <a href=""> https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project </a>
+      GitHub pages : <a class="about__link" href=""> https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project </a>
     </span>
     <span class="about__text">
       Design: file.pdf
