--- a/src/app/components/search-item/search-item.component.css
+++ b/src/app/components/search-item/search-item.component.css
@@ -8,7 +8,7 @@
     background-color: rgb(49, 64, 82);
     border: 0;
     color: rgb(92, 92, 92);
-
+    user-select: none;
 }
 
 .search-item__button {
@@ -16,4 +16,5 @@
     color: rgb(92, 92, 92);
     padding-left: 2px;
     padding-right: 2px;
+    cursor: pointer;
 }
