--- a/src/app/components/search-item/search-item.component.html
+++ b/src/app/components/search-item/search-item.component.html
@@ -2,7 +2,7 @@
           class="search-item__input" 
           placeholder="Search..."
           [(ngModel)] = "inputValue"
-          (input) = "getValue(inputValue)"
+          (input) = "getValue()"
           (keyup.enter) = "searchItems()"
           (focusout) = "inputValue = ''"
           >
@@ -10,6 +10,6 @@
           class="search-item__button" 
           (click) = "toggle()">
 </fa-icon>
-<app-search-form  *ngIf = "this._searchFormService.showForm" 
-                  [style.display] = "this._searchFormService.displayForm">
+<app-search-form  *ngIf = "_searchFormService.showForm" 
+                  [style.display] = "_searchFormService.displayForm">
 </app-search-form>
