--- a/src/app/components/side-navigation-bar-item/side-navigation-bar-item.component.css
+++ b/src/app/components/side-navigation-bar-item/side-navigation-bar-item.component.css
@@ -1,15 +1,15 @@
-.side-naigation-bar-item {
+.side-navigation-bar-item {
     display: flex;
     flex-direction: row;
     align-items: center;
     cursor: pointer;
 }
 
-.side-naigation-bar-item:hover {
+.side-navigation-bar-item:hover {
 box-shadow: 0px 0px 1px 1px white;
 }
 
-.side-naigation-bar-item__icon {
+.side-navigation-bar-item__icon {
     width: 3em;
     height: 3em;
     display: flex;
@@ -17,15 +17,8 @@ box-shadow: 0px 0px 1px 1px white;
     align-items: center;
 }
 
-.side-naigation-bar-item__text {
+.side-navigation-bar-item__text {
     padding-top: 0.25em;
     width: 10em;
     user-select: none;
-}
-
-@media (max-width: 600px) {
-    .side-naigation-bar-item__text {
-       display: none;
-    }
-
 }
