--- a/src/app/components/side-navigation-bar-item/side-navigation-bar-item.component.html
+++ b/src/app/components/side-navigation-bar-item/side-navigation-bar-item.component.html
@@ -1,6 +1,6 @@
-<div class="side-naigation-bar-item">
-  <fa-icon [icon]="navIcon" class="side-naigation-bar-item__icon"></fa-icon>
-  <span *ngIf = "showText" class="side-naigation-bar-item__text">
+<div class="side-navigation-bar-item">
+  <fa-icon [icon]="navIcon" class="side-navigation-bar-item__icon"></fa-icon>
+  <span *ngIf = "showText" class="side-navigation-bar-item__text">
       {{navItemText}}
   </span>
 </div>
