--- a/src/app/components/subscribe-item-window/subscribe-item-window.component.css
+++ b/src/app/components/subscribe-item-window/subscribe-item-window.component.css
@@ -20,6 +20,17 @@
   justify-content: space-around;
   align-items: center;
   z-index: 3;
+  user-select: none;
+}
+
+.subscribe-item-container {
+  position: absolute;
+  background: rgba(38, 33, 38, 0.95);
+  width: 100vw;
+  height: 100vh;
+  bottom: 0;
+  right: 0;
+  color: white;
 }
 
 .subscribe-item__title {
@@ -76,7 +87,7 @@
   border: 2px solid rgb(82, 78, 82);
 }
 
-.subscribe-item__avarege {
+.subscribe-item__average {
   height: 100%;
   background-color: white;
   border-radius: 5px;
@@ -87,16 +98,6 @@
 .subscribe-item__img-btn-close:hover {
   background-color: rgba(38, 33, 38, 0.95);
   color: rgba(82, 78, 82, 0.7);
-}
-
-.subscribe-item-container {
-  position: absolute;
-  background: rgba(38, 33, 38, 0.95);
-  width: 100vw;
-  height: 100vh;
-  bottom: 0;
-  right: 0;
-  color: white;
 }
 
 .subscribe-item__header {
@@ -126,8 +127,8 @@
   width: 90%;
   height: 20%;
   display: flex;
-  flex-direction: column;
   justify-content: space-around;
+  flex-direction: column;
   border-radius: 5px;
   border: 2px solid rgb(82, 78, 82);
   box-sizing: border-box;
@@ -153,25 +154,4 @@
   color:rgba(82, 78, 82, 0.7);
   cursor: pointer;
   background-color: rgba(65, 62, 62, 0.7);
-}
-
-@media (max-width: 600px) {
-  .subscribe-item {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    overflow-y: scroll;
-    height: max-content;
-    top: 0;
-  }
-
-  .subscribe-item__title-container{
-    width: 95%;
-    margin-top: 2em;
-  }
-  
-  .subscribe-item__img {
-    width: 80vw;
-    height: 50vw;
-  }
 }
