--- a/src/app/components/subscribe-library/subscribe-library.component.html
+++ b/src/app/components/subscribe-library/subscribe-library.component.html
@@ -1,3 +1,3 @@
-<app-subscribe-item-window [itemDescribtion] = 'itemSubcribtion$ | async'
-                           [showbutton] = 'showbutton'
+<app-subscribe-item-window [itemDescription] = 'itemSubscription$ | async'
+                           [showButton] = 'showButton'
                            ></app-subscribe-item-window>
