--- a/src/app/components/subscribe-movie/subscribe-movie.component.html
+++ b/src/app/components/subscribe-movie/subscribe-movie.component.html
@@ -1,5 +1,5 @@
-<app-subscribe-item-window [itemDescribtion] = 'itemDescribtion$ | async'
+<app-subscribe-item-window [itemDescription] = 'itemDescription$ | async'
                             [isItemInLibrary] = 'isMovieInLibrary$ | async'
                             (setItemToLocal) = 'setMovieToLocal($event)'
-                            [showbutton] = 'showbutton'
+                            [showButton] = 'showButton'
                             ></app-subscribe-item-window>
