--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,7 +7,7 @@
       GitHub URL: <a class="about__link" href="https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project"> https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project </a>
     </span>
     <span class="about__text">
-      GitHub pages : <a class="about__link" href=""> https://github.com/DzmitryHarnakou/Dzmitry_Harnakou-project </a>
+      GitHub pages : <a class="about__link" href="https://dzmitryharnakou.github.io/"> https://dzmitryharnakou.github.io/ </a>
     </span>
     <span class="about__text">
       Design: file.pdf
